# pyairtouch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
docs/: design.md
examples/: example.py  pyproject.toml  scan.py
pyairtouch/: api.py  factory.py
pyairtouch/at4/: api.py
pyairtouch/at4/comms/: x1FFF10_err_info.py  x1FFF11_ac_ability.py  x1FFF30_console_ver.py  x2B_group_status.py
pyairtouch/at5/: api.py
pyairtouch/at5/comms/: x1FFF10_err_info.py  xC021_zone_status.py  xC022_ac_ctrl.py  xC023_ac_status.py  xC033_ac_timer_status.py
pyairtouch/comms/: discovery.py  heartbeat.py  socket.py
